--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="styles/magic.min.css">
 	<script src="https://kit.fontawesome.com/d1f3dd87b7.js" crossorigin="anonymous"></script>
+	<meta name="google-site-verification" content="EZ8k8-dzMEMsI3f22HEs5fMHvZ4jVpHuWrNZn7hgwpA" />
 </head>
 
 <body>
